--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -104,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\DAO\AccountDAO.cs" />
+    <Compile Include="BLL\DAO\LogDAO.cs" />
     <Compile Include="BLL\DAO\TicketDAO.cs" />
     <Compile Include="BLL\DAO\CustomerDAO.cs" />
     <Compile Include="BLL\DAO\ReportDAO.cs" />
@@ -124,6 +125,7 @@
     <Compile Include="BLL\KhachHangBLL.cs" />
     <Compile Include="BLL\DTO\ChuyenBayDTO.cs" />
     <Compile Include="BLL\DTO\SearchFlightParams.cs" />
+    <Compile Include="BLL\TicketHelper.cs" />
     <Compile Include="Controls\TimelineNodeType.cs" />
     <Compile Include="DAL\DatVeDAO.cs" />
     <Compile Include="DAL\DBConnection.cs" />
@@ -238,11 +240,23 @@
     <Compile Include="frmMayBay.Designer.cs">
       <DependentUpon>frmMayBay.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmNhatKyHoatDong.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNhatKyHoatDong.Designer.cs">
+      <DependentUpon>frmNhatKyHoatDong.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPriceDetails.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmPriceDetails.Designer.cs">
       <DependentUpon>frmPriceDetails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmQuanLiKhachhang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmQuanLiKhachhang.Designer.cs">
+      <DependentUpon>frmQuanLiKhachhang.cs</DependentUpon>
     </Compile>
     <Compile Include="frmQuanLiNhanVien.cs">
       <SubType>Form</SubType>
@@ -267,6 +281,12 @@
     </Compile>
     <Compile Include="frmThanhToan.Designer.cs">
       <DependentUpon>frmThanhToan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmThemKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmThemKhachHang.Designer.cs">
+      <DependentUpon>frmThemKhachHang.cs</DependentUpon>
     </Compile>
     <Compile Include="frmThemNhanVien.cs">
       <SubType>Form</SubType>
@@ -328,6 +348,12 @@
     <Compile Include="frmUserMenu.Designer.cs">
       <DependentUpon>frmUserMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmVe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmVe.Designer.cs">
+      <DependentUpon>frmVe.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controls\StopControl.cs">
@@ -355,8 +381,17 @@
     <EmbeddedResource Include="frmMuaHanhLy.resx">
       <DependentUpon>frmMuaHanhLy.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmNhatKyHoatDong.resx">
+      <DependentUpon>frmNhatKyHoatDong.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmQuanLiKhachhang.resx">
+      <DependentUpon>frmQuanLiKhachhang.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmQuanLiNhanVien.resx">
       <DependentUpon>frmQuanLiNhanVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmThemKhachHang.resx">
+      <DependentUpon>frmThemKhachHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmThemNhanVien.resx">
       <DependentUpon>frmThemNhanVien.cs</DependentUpon>
@@ -366,6 +401,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmUserMenu.resx">
       <DependentUpon>frmUserMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVe.resx">
+      <DependentUpon>frmVe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmXemDanhSach.resx">
       <DependentUpon>frmXemDanhSach.cs</DependentUpon>
