chức năng in vé, sửa khi đổi chuyến bay có thể chọn ghế theo hạng vé mới

--- a/Airplace2025/Airplace2025.csproj
+++ b/Airplace2025/Airplace2025.csproj
@@ -372,6 +372,7 @@
     <Compile Include="frmXemDanhSach.Designer.cs">
       <DependentUpon>frmXemDanhSach.cs</DependentUpon>
     </Compile>
+    <Compile Include="TicketRender.cs" />
     <EmbeddedResource Include="Controls\FlightLegControl.resx">
       <DependentUpon>FlightLegControl.cs</DependentUpon>
     </EmbeddedResource>
